--- a/index.html
+++ b/index.html
@@ -2566,9 +2566,9 @@
                     <div class="brand-button" data-brand="realme">Realme</div>
                     <div class="brand-button" data-brand="umidigi">Umidigi</div>
                     <div class="brand-button" data-brand="itel">Itel</div>
-                    <div class="brand-button" data-brand="tecno">Tecno</div>
                     <div class="brand-button" data-brand="infinix">Infinix</div>
                     <div class="brand-button" data-brand="honor">Honor</div>
+                    <div class="brand-button" data-brand="tecno-">tecno-</div>
                     <div class="brand-button" data-brand="samsung">Samsung</div>
                     <div class="brand-button" data-brand="apple">Apple</div>
                 </div>
@@ -3304,7 +3304,7 @@
             <h2>Mostruário (Entradas)</h2>
         </div>
         <div class="collaborator-content" style="align-items: stretch; gap: 1rem;">
-            <div class="input-group" style="max-width: none; margin-bottom: 0;">
+                        <div class="input-group" style="max-width: none; margin-bottom: 0;">
                 <label for="mt-brand-filter">Filtrar por Marca</label>
                 <select id="mt-brand-filter" class="data-input">
                     <option value="" selected>Selecione uma marca...</option>
@@ -3315,9 +3315,9 @@
                     <option value="realme">Realme</option>
                     <option value="umidigi">Umidigi</option>
                     <option value="itel">Itel</option>
-                    <option value="tecno">Tecno</option>
                     <option value="infinix">Infinix</option>
                     <option value="honor">Honor</option>
+                    <option value="tecno-">tecno-</option>
                 </select>
             </div>
             <div id="mt-content-area" style="width: 100%; display: flex; flex-direction: column; gap: 1rem;">
@@ -3349,9 +3349,9 @@
                         <option value="realme">Realme</option>
                         <option value="umidigi">Umidigi</option>
                         <option value="itel">Itel</option>
-                        <option value="tecno">Tecno</option>
                         <option value="infinix">Infinix</option>
                         <option value="honor">Honor</option>
+                        <option value="tecno-">tecno-</option>
                     </select>
                 </div>
                 <div class="input-group">
@@ -3416,9 +3416,9 @@
                     <option value="realme">Realme</option>
                     <option value="umidigi">Umidigi</option>
                     <option value="itel">Itel</option>
-                    <option value="tecno">Tecno</option>
                     <option value="infinix">Infinix</option>
                     <option value="honor">Honor</option>
+                    <option value="tecno-">tecno-</option>
                 </select>
             </div>
             <div class="input-group">
@@ -4251,7 +4251,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.4.7'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.4.8'; // Altere este número para atualizar a versão
     const GOOGLE_SHEET_API_URL = 'https://script.google.com/macros/s/AKfycbwrtULaONXOEjigQ5i9Tqnh1_Bnd0VIJJxBUy9qZgknwtm6FcGB0Dx2Ip-dMl_PyJ3Itg/exec';
 
     const CASH_BOX_INITIAL_VALUE = 1000;
