--- a/index.html
+++ b/index.html
@@ -2569,6 +2569,7 @@
                     <div class="brand-button" data-brand="infinix">Infinix</div>
                     <div class="brand-button" data-brand="honor">Honor</div>
                     <div class="brand-button" data-brand="tecno-">tecno-</div>
+                    <div class="brand-button" data-brand="spark">SPARK</div>
                     <div class="brand-button" data-brand="samsung">Samsung</div>
                     <div class="brand-button" data-brand="apple">Apple</div>
                 </div>
@@ -3314,6 +3315,7 @@
                     <option value="infinix">Infinix</option>
                     <option value="honor">Honor</option>
                     <option value="tecno-">tecno-</option>
+                    <option value="spark">SPARK</option>
                 </select>
             </div>
             <div id="mt-content-area" style="width: 100%; display: flex; flex-direction: column; gap: 1rem;">
@@ -3348,6 +3350,7 @@
                         <option value="infinix">Infinix</option>
                         <option value="honor">Honor</option>
                         <option value="tecno-">tecno-</option>
+                        <option value="spark">SPARK</option>
                     </select>
                 </div>
                 <div class="input-group">
@@ -3415,6 +3418,7 @@
                     <option value="infinix">Infinix</option>
                     <option value="honor">Honor</option>
                     <option value="tecno-">tecno-</option>
+                    <option value="spark">SPARK</option>
                 </select>
             </div>
             <div class="input-group">
@@ -4247,7 +4251,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '3.4.9'; // Altere este número para atualizar a versão
+    const APP_VERSION = '3.5.0'; // Altere este número para atualizar a versão
     const GOOGLE_SHEET_API_URL = 'https://script.google.com/macros/s/AKfycbwrtULaONXOEjigQ5i9Tqnh1_Bnd0VIJJxBUy9qZgknwtm6FcGB0Dx2Ip-dMl_PyJ3Itg/exec';
 
     const CASH_BOX_INITIAL_VALUE = 1000;
