--- a/index.html
+++ b/index.html
@@ -2749,19 +2749,19 @@
             </div>
         </section>
 
-            <!-- Seção do Ranking Mensal de Colaboradores -->
-        <section id="ranking">
-            <h2 class="section-title">Ranking de Vendas</h2>
-            <div id="ranking-container" class="ranking-list">
+            <!-- NOVA Seção do Ranking de Serviços -->
+        <section id="service-ranking">
+            <h2 class="section-title">Ranking de Serviços</h2>
+            <div id="service-ranking-container" class="ranking-list">
                 <!-- O JavaScript irá popular este container -->
                 <p style="text-align: center; padding: 1rem;">Carregando ranking...</p>
             </div>
         </section>
 
-        <!-- NOVA Seção do Ranking de Serviços -->
-        <section id="service-ranking">
-            <h2 class="section-title">Ranking de Serviços</h2>
-            <div id="service-ranking-container" class="ranking-list">
+        <!-- Seção do Ranking Mensal de Colaboradores -->
+        <section id="ranking">
+            <h2 class="section-title">Ranking de Vendas</h2>
+            <div id="ranking-container" class="ranking-list">
                 <!-- O JavaScript irá popular este container -->
                 <p style="text-align: center; padding: 1rem;">Carregando ranking...</p>
             </div>
@@ -8135,7 +8135,10 @@ Promise.all([
                     ${crownHtml}
                     <img src="${photoUrl}" alt="Foto de ${collab.name}" class="rank-photo">
                 </div>
-                <div class="rank-medal">${medals[index]}</div>
+                <div class="rank-medal" style="width: auto; padding-right: 8px;">
+                    <span style="font-weight: bold; margin-right: 2px;">${rank}º</span>
+                    ${medals[index]}
+                </div>
                 <div class="rank-details">
                     <div class="rank-name">
                         <span>${collab.name}</span>
@@ -8233,12 +8236,15 @@ async function calculateAndDisplayServiceRanking() {
                 <div class="rank-photo-container">
                     <img src="${photoUrl}" alt="Foto de ${collab.name}" class="rank-photo">
                 </div>
-                <div class="rank-medal">${medals[index]}</div>
+                <div class="rank-medal" style="width: auto; padding-right: 8px;">
+                    <span style="font-weight: bold; margin-right: 2px;">${rank}º</span>
+                    ${medals[index]}
+                </div>
                 <div class="rank-details">
                     <div class="rank-name" style="justify-content: space-between;">
                         <span>${collab.name}</span>
                         <div style="display: flex; align-items: center;">
-                            <span class="rank-prize" style="color: #fff; font-weight: bold; margin-right: 5px;">${prizeValue}</span>
+                            <span class="rank-prize" style="color: #fff; font-weight: bold; margin-right: 5px; font-size: 1.1rem;">${prizeValue}</span>
                             ${serviceIcon}
                         </div>
                     </div>
@@ -9348,17 +9354,20 @@ async function calculateAndDisplayStoreRanking() {
                 // --- FIM DA LÓGICA DA BOLHA ---
 
                 rankItem.innerHTML = `
-                    <div class="rank-photo-container">
-                        ${crownHtml}
-                        <img src="${photoUrl}" alt="Foto de ${collab.name}" class="rank-photo">
+                <div class="rank-photo-container">
+                    ${crownHtml}
+                    <img src="${photoUrl}" alt="Foto de ${collab.name}" class="rank-photo">
+                </div>
+                <div class="rank-medal" style="width: auto; padding-right: 8px;">
+                    <span style="font-weight: bold; margin-right: 2px;">${rank}º</span>
+                    ${medals[index]}
+                </div>
+                <div class="rank-details">
+                    <div class="rank-name">
+                        <span>${collab.name}</span>
+                        <button class="parabens-btn" data-recipient-name="${collab.name}"><i class="fa-solid fa-hands-clapping"></i></button>
+                        <div class="prize-container">${prizeHTML}</div>
                     </div>
-                    <div class="rank-medal">${medals[index]}</div>
-                    <div class="rank-details">
-                        <div class="rank-name">
-                            <span>${collab.name}</span>
-                            <button class="parabens-btn" data-recipient-name="${collab.name}"><i class="fa-solid fa-hands-clapping"></i></button>
-                            <div class="prize-container">${prizeHTML}</div>
-                        </div>
                         ${statusBubbleHtml}
                         <div class="progress-bar-container">
                             <div class="progress-bar" style="width: ${progressBarWidth}%;"></div>
