--- a/index.html
+++ b/index.html
@@ -3680,7 +3680,7 @@
                         <option value="itel">Itel</option>
                         <option value="infinix">Infinix</option>
                         <option value="honor">Honor</option>
-                        <option value="joog">Joog</option>
+                        <option value="acessorios">Acessorios</option>
                         <option value="meizu">Meizu</option>
                         <option value="tecno">Tecno</option>
                     </select>
@@ -3749,7 +3749,7 @@
                     <option value="itel">Itel</option>
                     <option value="infinix">Infinix</option>
                                         <option value="honor">Honor</option>
-                    <option value="joog">Joog</option>
+                    <option value="acessorios">Acessorios</option>
                     <option value="meizu">Meizu</option>
                     <option value="tecno">Tecno</option>
                 </select>
@@ -4574,7 +4574,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '6.0.0 - A '; // Altere este número para atualizar a versão
+    const APP_VERSION = '6.0.1 - B '; // Altere este número para atualizar a versão
     const GOOGLE_SHEET_API_URL = 'https://script.google.com/macros/s/AKfycbwrtULaONXOEjigQ5i9Tqnh1_Bnd0VIJJxBUy9qZgknwtm6FcGB0Dx2Ip-dMl_PyJ3Itg/exec';
 
     const CASH_BOX_INITIAL_VALUE = 1000;
